--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,13 @@ security:
             anonymous: true
             lazy: true
             provider: app_user_provider
+            guard:
+                authenticators:
+                    - App\Security\WishlistAutenticatorAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -28,5 +35,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: [ROLE_ADMIN] }
+        - { path: ^/personne/list/*, roles: [ROLE_SECRETARIAT, ROLE_ADMIN, ROLE_USER]}
+        - { path: ^/personne, roles: [ROLE_SECRETARIAT, ROLE_ADMIN]}
+        - { path: ^/adresse, roles: [ROLE_SECRETARIAT, ROLE_ADMIN] }
+        - { path: ^/cadeau, roles: [ROLE_STOCK, ROLE_ADMIN] }
+        - { path: ^/categorie, roles: [ROLE_STOCK, ROLE_ADMIN] }
         - { path: ^/, roles: [IS_AUTHENTICATED_ANONYMOUSLY, ROLE_USER, ROLE_ADMIN, ROLE_STOCK, ROLE_SECRETARIAT] }
